--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "vue-breadcrumbs": "^1.1.2",
     "vue-img-preview": "^1.1.1",
     "vue-router": "^3.0.1",
+    "vue-upload-image": "^1.1.0",
+    "vuedraggable": "^2.16.0",
     "vuefire": "^1.4.5"
   },
   "devDependencies": {
