--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "vue": "^2.5.2",
     "vue-breadcrumbs": "^1.1.2",
     "vue-img-preview": "^1.1.1",
+    "vue-picture-input": "^2.1.6",
     "vue-router": "^3.0.1",
-    "vue-upload-image": "^1.1.0",
     "vuedraggable": "^2.16.0",
     "vuefire": "^1.4.5"
   },
